Recycler view binded with API data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Neys</string>
+    <string name="empty_list_title">An error occurred when retrieving articles…</string>
 </resources>
