Added search view Added fragments Refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="bottom_navigation_menu_latest">Latest</string>
     <string name="bottom_navigation_menu_search">Search</string>
     <string name="bottom_navigation_menu_liked">Liked</string>
+    <string name="search">Search</string>
 </resources>
